Memoise per-dictionary string length tables and fill them over id ranges in parallel
q27 (AVG(length(URL))) rebuilt the 18.3M-entry URL length table on the planning
thread on EVERY try. Handle.stringLengthTable(headerKey, mode) now keeps the table
per (dictionary, mode) within sirix.projection.stringLength.memoBytes (512 MB, 0 =
never keep); a miss fills disjoint id ranges in parallel (ReadView.fillLengthTable,
one view per lane). Witnesses projectionStringLengthTableMemoHitCount()/BuildCount();
[lengthTable] and [groupBudget] diag lines (HeapHeadroom.describe() names every
figure a budget derives from). At 100M (LT1 leg): q27 hot 7.31 -> 4.96 s, the table
built once in 1,626 ms over 20 lanes, then memo=hit; 10/10 dumps identical.

GlobalValueDictionaryLengthTableTest: ranged fills by seven views equal the
whole-view table in both modes with spilled and multi-byte entries (a broken
code-point count fails it); the memo keeps within its bound, first derivation wins.

Claude-Session: https://claude.ai/code/session_01AcZTGGbUsm2JbRhrZTeC4a